Fixed more issues found by findbugs